--- a/packages/mdc-switch/package.json
+++ b/packages/mdc-switch/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@material/animation": "^0.41.0",
     "@material/base": "^0.41.0",
+    "@material/dom": "^0.41.0",
     "@material/elevation": "^0.44.0",
     "@material/feature-targeting": "^0.44.0",
     "@material/ripple": "^0.44.0",
