--- a/packages/material-components-web/package.json
+++ b/packages/material-components-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "material-components-web",
   "description": "Modular and customizable Material Design UI components for the web",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -16,47 +16,47 @@
     "url": "https://github.com/material-components/material-components-web"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/auto-init": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/button": "^0.44.1",
-    "@material/card": "^0.44.1",
-    "@material/checkbox": "^0.44.1",
-    "@material/chips": "^0.44.1",
-    "@material/dialog": "^0.44.1",
-    "@material/dom": "^0.41.0",
-    "@material/drawer": "^0.44.1",
-    "@material/elevation": "^0.44.1",
-    "@material/fab": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/auto-init": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/button": "^1.0.0-0",
+    "@material/card": "^1.0.0-0",
+    "@material/checkbox": "^1.0.0-0",
+    "@material/chips": "^1.0.0-0",
+    "@material/dialog": "^1.0.0-0",
+    "@material/dom": "^1.0.0-0",
+    "@material/drawer": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
+    "@material/fab": "^1.0.0-0",
     "@material/feature-targeting": "^0.44.1",
-    "@material/floating-label": "^0.44.1",
-    "@material/form-field": "^0.44.1",
-    "@material/grid-list": "^0.44.1",
-    "@material/icon-button": "^0.44.1",
-    "@material/image-list": "^0.44.1",
+    "@material/floating-label": "^1.0.0-0",
+    "@material/form-field": "^1.0.0-0",
+    "@material/grid-list": "^1.0.0-0",
+    "@material/icon-button": "^1.0.0-0",
+    "@material/image-list": "^1.0.0-0",
     "@material/layout-grid": "^0.41.0",
-    "@material/line-ripple": "^0.43.0",
-    "@material/linear-progress": "^0.43.0",
-    "@material/list": "^0.44.1",
-    "@material/menu": "^0.44.1",
-    "@material/menu-surface": "^0.44.1",
-    "@material/notched-outline": "^0.44.1",
-    "@material/radio": "^0.44.1",
-    "@material/ripple": "^0.44.1",
+    "@material/line-ripple": "^1.0.0-0",
+    "@material/linear-progress": "^1.0.0-0",
+    "@material/list": "^1.0.0-0",
+    "@material/menu": "^1.0.0-0",
+    "@material/menu-surface": "^1.0.0-0",
+    "@material/notched-outline": "^1.0.0-0",
+    "@material/radio": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/select": "^0.44.1",
-    "@material/shape": "^0.44.1",
-    "@material/slider": "^0.44.1",
-    "@material/snackbar": "^0.44.1",
-    "@material/switch": "^0.44.1",
-    "@material/tab": "^0.44.1",
-    "@material/tab-bar": "^0.44.1",
-    "@material/tab-indicator": "^0.43.0",
-    "@material/tab-scroller": "^0.44.1",
-    "@material/textfield": "^0.44.1",
-    "@material/theme": "^0.43.0",
-    "@material/toolbar": "^0.44.1",
-    "@material/top-app-bar": "^0.44.1",
-    "@material/typography": "^0.44.1"
+    "@material/select": "^1.0.0-0",
+    "@material/shape": "^1.0.0-0",
+    "@material/slider": "^1.0.0-0",
+    "@material/snackbar": "^1.0.0-0",
+    "@material/switch": "^1.0.0-0",
+    "@material/tab": "^1.0.0-0",
+    "@material/tab-bar": "^1.0.0-0",
+    "@material/tab-indicator": "^1.0.0-0",
+    "@material/tab-scroller": "^1.0.0-0",
+    "@material/textfield": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/toolbar": "^1.0.0-0",
+    "@material/top-app-bar": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0"
   }
 }
