--- a/packages/mdc-animation/package.json
+++ b/packages/mdc-animation/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/animation",
   "description": "Animation Variables and Mixins used by Material Components for the web",
-  "version": "0.41.0",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
