--- a/packages/mdc-chips/package.json
+++ b/packages/mdc-chips/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/chips",
   "description": "The Material Components for the Web chips component",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "main": "dist/mdc.chips.js",
   "module": "index.js",
@@ -20,14 +20,14 @@
     "access": "public"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/checkbox": "^0.44.1",
-    "@material/elevation": "^0.44.1",
-    "@material/ripple": "^0.44.1",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/checkbox": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
