--- a/packages/mdc-drawer/package.json
+++ b/packages/mdc-drawer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/drawer",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "description": "The Material Components Web drawer component",
   "license": "MIT",
   "keywords": [
@@ -18,15 +18,15 @@
     "url": "https://github.com/material-components/material-components-web.git"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/elevation": "^0.44.1",
-    "@material/list": "^0.44.1",
-    "@material/ripple": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
+    "@material/list": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "focus-trap": "^4.0.2",
     "tslib": "^1.9.3"
   }
