--- a/packages/mdc-form-field/package.json
+++ b/packages/mdc-form-field/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/form-field",
   "description": "Material Components for the web wrapper for laying out form fields and labels next to one another",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -17,11 +17,11 @@
     "url": "https://github.com/material-components/material-components-web.git"
   },
   "dependencies": {
-    "@material/base": "^0.41.0",
-    "@material/ripple": "^0.44.0",
+    "@material/base": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
