--- a/packages/mdc-menu-surface/package.json
+++ b/packages/mdc-menu-surface/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/menu-surface",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "description": "The Material Components for the web menu surface component",
   "license": "MIT",
   "keywords": [
@@ -17,13 +17,13 @@
     "url": "https://github.com/material-components/material-components-web.git"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/elevation": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
     "@material/feature-targeting": "^0.44.1",
     "@material/rtl": "^0.42.0",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
     "tslib": "^1.9.3"
   },
   "publishConfig": {
