--- a/packages/mdc-notched-outline/package.json
+++ b/packages/mdc-notched-outline/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/notched-outline",
   "description": "The Material Components for the web notched-outline component",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -21,12 +21,12 @@
     "access": "public"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/floating-label": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/floating-label": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
