--- a/packages/mdc-slider/package.json
+++ b/packages/mdc-slider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/slider",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "description": "The Material Components for the web slider component",
   "main": "dist/mdc.slider.js",
   "module": "index.js",
@@ -20,11 +20,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
