--- a/packages/mdc-snackbar/package.json
+++ b/packages/mdc-snackbar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/snackbar",
   "description": "The Material Components for the web snackbar component",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -17,16 +17,16 @@
     "url": "https://github.com/material-components/material-components-web.git"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/button": "^0.44.1",
-    "@material/dom": "^0.41.0",
-    "@material/icon-button": "^0.44.1",
-    "@material/ripple": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/button": "^1.0.0-0",
+    "@material/dom": "^1.0.0-0",
+    "@material/icon-button": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
