--- a/packages/mdc-tab-bar/package.json
+++ b/packages/mdc-tab-bar/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/tab-bar",
   "description": "The Material Components for the web tab bar component",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -18,10 +18,10 @@
     "url": "https://github.com/material-components/material-components-web.git"
   },
   "dependencies": {
-    "@material/base": "^0.41.0",
-    "@material/elevation": "^0.44.1",
-    "@material/tab": "^0.44.1",
-    "@material/tab-scroller": "^0.44.1",
+    "@material/base": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
+    "@material/tab": "^1.0.0-0",
+    "@material/tab-scroller": "^1.0.0-0",
     "tslib": "^1.9.3"
   },
   "publishConfig": {
