--- a/packages/mdc-tab/package.json
+++ b/packages/mdc-tab/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material/tab",
   "description": "The Material Components for the web tab component",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "license": "MIT",
   "keywords": [
     "material components",
@@ -17,12 +17,12 @@
   "sideEffects": false,
   "types": "dist/mdc.tab.d.ts",
   "dependencies": {
-    "@material/base": "^0.41.0",
-    "@material/ripple": "^0.44.1",
+    "@material/base": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/tab-indicator": "^0.43.0",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/tab-indicator": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   },
   "publishConfig": {
