--- a/packages/mdc-tabs/package.json
+++ b/packages/mdc-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/tabs",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "description": "The Material Components for the web tabs component",
   "license": "MIT",
   "main": "dist/mdc.tabs.js",
@@ -20,12 +20,12 @@
     "access": "public"
   },
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/ripple": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   }
 }
