--- a/packages/mdc-top-app-bar/package.json
+++ b/packages/mdc-top-app-bar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material/top-app-bar",
-  "version": "0.44.1",
+  "version": "1.0.0-0",
   "description": "The Material Components for the web top app bar component",
   "license": "MIT",
   "main": "dist/mdc.topAppBar.js",
@@ -19,14 +19,14 @@
     "topappbar"
   ],
   "dependencies": {
-    "@material/animation": "^0.41.0",
-    "@material/base": "^0.41.0",
-    "@material/elevation": "^0.44.1",
-    "@material/ripple": "^0.44.1",
+    "@material/animation": "^1.0.0-0",
+    "@material/base": "^1.0.0-0",
+    "@material/elevation": "^1.0.0-0",
+    "@material/ripple": "^1.0.0-0",
     "@material/rtl": "^0.42.0",
-    "@material/shape": "^0.44.1",
-    "@material/theme": "^0.43.0",
-    "@material/typography": "^0.44.1",
+    "@material/shape": "^1.0.0-0",
+    "@material/theme": "^1.0.0-0",
+    "@material/typography": "^1.0.0-0",
     "tslib": "^1.9.3"
   },
   "publishConfig": {
