chore: Rewrite lint:imports & add component dep check
This PR refactors `npm run lint:imports` and adds a new check for component-dependent imports in non-component files.

Example error messages:

```
ERROR: mdc-textfield/foundation.ts: Import path '@material/base/index'
is only allowed in component.ts and index.ts files. Please import a more specific file
(e.g., 'adapter', 'foundation', 'types').
This keeps byte sizes smaller for wrapper libraries that only use our foundations.

ERROR: mdc-textfield/component.ts: Import path '@material/base'
should point directly to a specific TypeScript file.
E.g.: import '@material/base/index'

ERROR: mdc-textfield/index.ts: Import path './character-counter'
should point directly to a specific TypeScript file.
E.g.: import './character-counter/index'

ERROR: mdc-textfield/component.ts: Import path '@material/dom/ponyfill'
references NPM module '@material/dom', but that module
is not listed in package.json dependencies.

ERROR: mdc-textfield/index.ts: Import path '../mdc-textfield/helper-text/index'
appears to be a relative path to an MDC package. Please use a @material import instead.
E.g.: import '@material/foo/types' instead of import '../mdc-foo/types'.

ERROR: mdc-textfield/foundation.ts: Import path
'/Users/advorak/dev/mdc-web/packages/mdc-textfield/adapter'
appears to be an absolute path. Please use a relative path instead.
```

![screenshot](https://user-images.githubusercontent.com/409245/53447057-31e7df00-39c9-11e9-9a80-1d3e97763a09.png)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:js": "eslint test scripts webpack.config.js demos/webpack.config.js karma.conf.js",
     "lint:ts": "tslint --exclude \"**/*.d.ts\" \"packages/**/*.ts\" \"test/**/*.ts\" \"scripts/**/*.ts\"",
     "lint:html": "find test/screenshot/spec/ -name '*.html' | grep -v 'index.html$' | xargs htmllint",
-    "lint:imports": "node scripts/check-imports.js",
+    "lint:imports": "node scripts/lint-imports.js",
     "lint": "npm-run-all --parallel lint:*",
     "postinstall": "lerna bootstrap",
     "pretest": "npm run lint",
