--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint:js": "eslint test scripts webpack.config.js demos/webpack.config.js karma.conf.js",
     "lint:ts": "tslint --exclude \"**/*.d.ts\" \"packages/**/*.ts\" \"test/**/*.ts\" \"scripts/**/*.ts\"",
     "lint:html": "find test/screenshot/spec/ -name '*.html' | grep -v 'index.html$' | xargs htmllint",
-    "lint:imports": "node scripts/lint-imports.js",
+    "lint:mdc": "ts-node --project scripts/tsconfig.json -- scripts/lint-mdc.ts",
     "lint": "npm-run-all --parallel lint:*",
     "postinstall": "lerna bootstrap",
     "pretest": "npm run lint",
@@ -44,8 +44,14 @@
   },
   "devDependencies": {
     "@babel/parser": "^7.2.3",
+    "@babel/traverse": "^7.3.4",
+    "@babel/types": "^7.3.4",
     "@google-cloud/datastore": "^3.0.1",
     "@octokit/rest": "^16.15.0",
+    "@types/babel__traverse": "^7.0.6",
+    "@types/glob": "^7.1.1",
+    "@types/node": "^11.10.5",
+    "@types/resolve": "0.0.8",
     "argparse": "^1.0.10",
     "ascii-table": "0.0.9",
     "autoprefixer": "^9.0.0",
@@ -111,7 +117,7 @@
     "postcss-loader": "^3.0.0",
     "protobufjs": "~6.8.6",
     "ps-node": "^0.1.6",
-    "recast": "^0.16.0",
+    "recast": "^0.17.3",
     "request-promise-native": "^1.0.5",
     "resemblejs": "^3.0.0",
     "resolve": "^1.3.2",
@@ -129,6 +135,7 @@
     "testdouble": "^3.2.4",
     "to-slug-case": "^1.0.0",
     "ts-loader": "^3.5.0",
+    "ts-node": "^8.0.3",
     "tslint": "^5.12.0",
     "typescript": "^3.1.6",
     "url-search-params-polyfill": "^5.0.0",
