--- a/packages/mdc-icon-button/package.json
+++ b/packages/mdc-icon-button/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@material/base": "^1.0.0",
+    "@material/feature-targeting": "^0.44.1",
     "@material/ripple": "^1.0.1",
     "@material/theme": "^1.0.0",
     "tslib": "^1.9.3"
