--- a/packages/mdc-dialog/package.json
+++ b/packages/mdc-dialog/package.json
@@ -22,6 +22,7 @@
     "@material/base": "^1.0.0",
     "@material/dom": "^1.0.1",
     "@material/elevation": "^1.0.0",
+    "@material/feature-targeting": "^0.44.1",
     "@material/ripple": "^1.0.1",
     "@material/rtl": "^0.42.0",
     "@material/shape": "^1.0.0",
