--- a/packages/mdc-fab/package.json
+++ b/packages/mdc-fab/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@material/animation": "^1.0.0",
     "@material/elevation": "^1.0.0",
+    "@material/feature-targeting": "^0.44.1",
     "@material/ripple": "^1.0.1",
     "@material/rtl": "^0.42.0",
     "@material/shape": "^1.0.0",
