--- a/packages/mdc-grid-list/package.json
+++ b/packages/mdc-grid-list/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@material/base": "^1.0.0",
+    "@material/feature-targeting": "^0.44.1",
     "@material/rtl": "^0.42.0",
     "@material/theme": "^1.0.0",
     "@material/typography": "^1.0.0",
