--- a/packages/mdc-chips/package.json
+++ b/packages/mdc-chips/package.json
@@ -24,6 +24,7 @@
     "@material/base": "^1.0.0",
     "@material/checkbox": "^2.1.1",
     "@material/elevation": "^1.1.0",
+    "@material/feature-targeting": "^0.44.1",
     "@material/ripple": "^2.1.1",
     "@material/shape": "^1.1.1",
     "@material/theme": "^1.1.0",
